Fix wrapping on mobile and update info

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,18 @@ p.markdown > img {
 	color: #afafaf;
 	font-size: 24px;
 }
+@media screen and (max-width: 700px) {
+	#recent-projects,
+	#recent-games {
+		flex-direction: column !important;
+	}
+	.item-1,
+	.item-2,
+	.item-3 {
+		padding-right: 0;
+		max-width: 100%;
+	}
+}
 /* Hit count */
 .visits {
 	text-align: left;
